--- a/roles/nfs/templates/exports.j2
+++ b/roles/nfs/templates/exports.j2
@@ -1,3 +1,4 @@
-/exports         192.168.9.0/16(rw,fsid=0,no_subtree_check,sync)
-/exports/homes   192.168.0.0/16(rw,nohide,insecure,no_subtree_check,sync)
-/exports/volumes 192.168.0.0/16(rw,nohide,insecure,no_subtree_check,sync)
+/srv/nfs     		192.168.9.0/16(rw,fsid=0,no_subtree_check,sync)
+/srv/nfs/appdata	192.168.0.0/16(rw,nohide,insecure,no_subtree_check,sync)
+/srv/nfs/home		192.168.0.0/16(rw,nohide,insecure,no_subtree_check,sync)
+
