--- a/roles/samba/templates/smb.conf.j2
+++ b/roles/samba/templates/smb.conf.j2
@@ -16,6 +16,7 @@
 [public]
   comment = Public share
   path = /srv/samba/public
+  force user = root
   valid users = terryl, peryl, winniec
   public = no
   writable = yes
